fixed formatting and worked on mobile media query

--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -7,6 +7,14 @@
   position: fixed;
 }
 
+@media screen and (max-width: 600px) {
+  .Overview {
+    width: 100%;
+    position: relative;
+    border: #b2baed 1px solid;
+  }
+}
+
 .Name {
   font-size: 3rem;
   font-weight: bold;
