--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,3 +1,5 @@
 .ProjectContainer {
   height: 1000px;
+  color: #72d4d6;
+  font-size: 100px;
 }
